<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VolActivity"
    android:orientation="vertical">

<EditText
    android:id="@+id/et_pjg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/et_length"
    android:lines="1"
    android:inputType="numberDecimal"
    android:textAlignment="center"
    android:layout_marginTop="20dp"/>

<EditText
     android:id="@+id/et_lbr"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/et_width"
     android:lines="1"
     android:inputType="numberDecimal"
     android:textAlignment="center"
    android:layout_marginTop="10dp"/>

<EditText
    android:id="@+id/et_tgg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/et_height"
    android:lines="1"
    android:inputType="numberDecimal"
    android:textAlignment="center"
    android:layout_marginTop="10dp"/>

<Button
    android:id="@+id/btn_htg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:text="@string/btn_htg"
    android:paddingTop="10dp"
    android:background="@drawable/btn_round" />

<TextView
    android:id="@+id/tv_hsl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:text="@string/tv_hsl"
    android:textSize="30sp"
    android:padding="20dp"
    android:paddingTop="30dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>